<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookshelfUser</string>
    <string name="content_descript" />
    <string name="all_book">所有刊物</string>
    <string name="free_book">免費</string>
    <string name="special_book">特刊</string>
    <string name="previous_book">前期</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Loading</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh</string>
    <string name="login">登  入</string>
    <string name="facebook_login">Facebook 登入</string>
    <string name="config">設  定</string>
    <string name="news">最 新 消 息</string>
    <string name="subscript">訂  閱</string>
    <string name="hint_login_name">帳 號</string>
    <string name="hint_login_password">密 碼</string>
    <string name="forget_password">忘 記 密 碼</string>
    <string name="add_account">註 冊 帳 戶</string>
    <string name="member_and_subscript">會員與訂閱</string>
    <string name="account_manager">帳戶管理</string>
    <string name="account_manager_email">></string>
    <string name="subscript_info">訂閱資訊</string>
    <string name="subscript_end_date">訂閱到期日</string>
    <string name="reply_buy_book">回復購買書籍</string>
    <string name="clear_downloaded_book">清除已下載書籍</string>
    <string name="function_setting">功能設置</string>
    <string name="message_push">訊息推播</string>
    <string name="option_descript">操作說明開關</string>
    <string name="clear_push_message">清除推播訊息</string>
    <string name="about_ous">關於我們</string>
    <string name="recommend_back">意見反饋</string>
    <string name="vendor_info">開發商資訊</string>
    <string name="login_error">帳號密碼錯誤</string>
    <string name="cancel">取 消</string>
    <string name="account_add_info">請輸入資料建立新帳戶</string>
    <string name="recheck_password">確 認 密 碼</string>
    <string name="email">信 箱</string>
    <string name="forget_password_info">請輸入註冊信箱，我們會寄重設密碼通知信到您的帳號信箱</string>
    <string name="send">送 出</string>
    <string name="demo_title">Hide</string>
    <string name="demo_date">1998 5月號</string>
    <string name="demo_description">Hideto Matsumoto（松本 秀人 Hideto Matsumoto，1964年12月13日－1998年5月2日），為一名日本音樂人、歌手及作曲人，他眾人皆知為日本重金屬樂團X Japan主音吉他手。他率先提出了「視覺系」這個名詞，故被認為是視覺系狂潮中的先驅者。
23歲時，受團長Yoshiki邀請而加入X Japan擔任主音吉他手的位置，一同度過樂團的草創時期、並在出道後大放異彩。而之後X Japan也逐漸成為日本深具影響力的視覺系樂團。hide成為享有盛名的搖滾巨星之後，也和外國友人組成樂團Zilch。hide除了歌聲及歌曲創作以外，他也演奏吉他及貝斯於大多歌曲。1998年，hide亦組建了hide with Spread Beaver樂團，並展現了創造性的管理才能。他在X Japan中使用大寫字體HIDE、而在個人solo時使用小寫字體hide以示區別。
hide去世於1998年5月2日早上8點52分。在前一晚的宿醉之後，第二天hide被發現一條毛巾弔死在房門把手上。日本警方似乎為了避免麻煩，當時斷然且一口咬定以自殺來結案，也被大篇幅報導是自殺而倍受爭議。但其好友和樂迷強烈公然反對這個死因。他們認為hide是意外而死的，最大的原因是hide的個性非常樂觀，平時也是個勇於挑戰難題的人；其次是他平時即非常為樂迷的寄望而努力，也相當注重樂手本身帶給年輕人的示範，自殺一途被認為有違他的處世原則。目前廣泛認同的死因：因吉他手背琴長期造成肩膀僵硬、脖子酸痛，所以常會在家中作頸部復健。但hide被認為在嚴重酒醉、又沒有旁人協助的情況下，意外將自己勒斃。</string>
    <string name="reader_version">Android Reader Version</string>
    <string name="book_store">書城</string>
    <string name="bookshelf">書櫃</string>
    <string name="preview">預覽</string>
    <string name="logo">Logo</string>
    <string name="app_list">APP清單</string>
    <string name="bookshelf_list">書櫃清單</string>
    <string name="book_list_book_image">Book Image</string>
    <string name="book_title">Book Title</string>
    <string name="book_date">Book Date</string>
    <string name="book_delete">Book Delete</string>
    <string name="open">開啟</string>
    <string name="delete">刪除</string>
    <string name="warning">警告</string>
    <string name="is_delete">是否刪除檔案?</string>
    <string name="loading_book">載入書本...</string>
    <string name="book_name">書名</string>
    <string name="app_id">1428413407371923</string>
    <string name="category_title">目  錄</string>
    <string name="favorite_title">我的最愛收藏</string>
    <string name="share_title">社群分享</string>
    <string name="share_Hint_word">留言...</string>
    <string name="start_unexpress">開始解壓縮書籍...</string>

</resources>