<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Trans_Black" >

    <RelativeLayout
        android:id="@id/account_add_main_layout"
        android:layout_width="360dp"
        android:layout_height="430dp"
        android:layout_centerInParent="true"
        android:background="@drawable/menu_option" >

        <TextView
            android:id="@id/account_add_title"
            style="@style/menu_option_title"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/add_account"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@id/separate_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/account_add_title"
            android:background="@color/separate_line" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/separate_line" >

            <TextView
                android:id="@id/button_cancel"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="#f3f4f5"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#0079ff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/button_ok"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="#f3f4f5"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#0079ff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_layout"
            android:layout_below="@id/separate_line"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <TextView
                android:id="@id/account_add_info"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="left|center_vertical"
                android:text="@string/account_add_info"
                android:textColor="#0d0d0d"
                android:textSize="16sp" />

            <EditText
                android:id="@id/login_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/hint_login_name"
                android:inputType="textPersonName"
                android:maxEms="10"
                android:paddingLeft="10dp"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@id/login_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edit_text"
                android:ems="10"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />

            <EditText
                android:id="@id/recheck_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edit_text"
                android:ems="10"
                android:hint="@string/recheck_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />

            <EditText
                android:id="@id/email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/style_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxEms="10"
                android:paddingLeft="10dp"
                android:textColor="@color/Black_Gray"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>