<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res/interactive.bookshelfuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#f3f4f5"
    android:paddingTop="100dp" >

    <RelativeLayout
        android:id="@id/forget_password_main_layout"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#f3f4f5" >

        <TextView
            android:id="@id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/forget_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0d0d0d" />

        <View
            android:id="@id/separate_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/forget_password_title"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/separate_line" />

        <TextView
            android:id="@id/forget_password_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separate_line"
            android:layout_centerHorizontal="true"
            android:text="@string/forget_password_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#9e9e9e"
            android:textSize="16sp" />

        <EditText
            android:id="@id/forget_password_email"
            style="@style/login_edit_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/forget_password_info"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <interactive.widget.ShapButton
            android:id="@id/forget_password_button"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_below="@id/forget_password_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            app1:borderColor="#0079ff"
            app1:borderColorClick="#c2defd"
            app1:borderSize="3dp"
            app1:text="@string/send"
            app1:textColor="#0079ff"
            app1:textColorClick="#c2defd"
            app1:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>