<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/interactive.bookshelfuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@id/gallery_book_image"
        android:layout_width="270dp"
        android:layout_height="360dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/content_descript"
        android:scaleType="fitXY"
        android:src="@drawable/demo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/gallery_book_image"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="60dp" >

        <TextView
            android:id="@id/book_city_all_book_first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#0d0d0d"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/book_city_all_book_first_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/demo_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#9a9a9a"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="95dp"
            android:layout_weight="1" >

            <TextView
                android:id="@id/book_city_all_book_first_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollHorizontally="false"
                android:selectAllOnFocus="false"
                android:text="@string/demo_description"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#0d0d0d"
                android:textSize="16sp" />

        </ScrollView>

        <interactive.widget.ShapButton
            android:id="@id/book_city_all_book_first_subscribt"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            app:borderColor="#0079ff"
            app:borderColorClick="#c2defd"
            app:borderSize="3dp"
            app:text="NT $"
            app:textColor="#0079ff"
            app:textColorClick="#c2defd"
            app:textSize="16sp"
            app:textType="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/gallery_book_image"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@id/gallery_book_image2"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/demo" />

    </RelativeLayout>

</RelativeLayout>